2012-01-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-visit-file): Move point to the beginning of the buffer
	after rendering.

2012-01-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el (gnus-sync-newsrc-groups): Quote normally.
	(gnus-sync-lesync-pre-save-group-entry): Remove invalid invlists.
	(gnus-sync-lesync-normalize-group-entry): Ignore a few more keys.

2012-01-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-read-group): Document more parameters
	(bug#9693).
	(gnus-summary-setup-buffer): Document return value (bug#9697).

	* mm-decode.el (mm-interactively-view-part): Use `completing-read',
	since ido doesn't work on symbols (bug#9632).

	* gnus.el (gnus-group-fast-parameter): Use the same precedence rules
	when getting a single value as when getting all the values.  This means
	that atoms like `gcc-self' work cumulatively, like variable settings,
	instead of getting the value from the last matching clause.
	(gnus-group-find-parameter): Protect against the group buffer not
	existing (bug#9585).

2012-01-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-activate-group): Document more parameters
	(bug#9694).

	* gnus-group.el (gnus-group-read-ephemeral-group): Doc clarification
	(bug#9692).

	* gnus-agent.el (gnus-agent-store-article): Tell the Agent when the
	article was fetched, so that it can be expired later (bug#9958).
	(gnus-agent-summary-fetch-series): Add doc string.
	(gnus-agent-summary-fetch-group): Don't remove tick and dormant marks
	(bug#9517).

	* nntp.el (nntp-retrieve-groups): Refuse to do retrieval when an async
	retrieval is happening.

	* gnus.el (gnus-parameters): Doc fix.

2012-01-06  Dave Abrahams  <dave@boostpro.com>  (tiny change)

	* gnus-sum.el (gnus-summary-refer-thread): If the subtree is hidden,
	show the thread after expansion.

2012-01-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (article-narrow-to-head): If the head is completely