@@ -1,3 +1,8 @@
+2012-01-10  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* auth-source.el (auth-source-user-and-password): Add convenience
+	wrapper to search by just host and optionally user.
+
 2012-01-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* shr.el (shr-visit-file): Move point to the beginning of the buffer
